WIP: read themes with a file:/// schema